Reformulação do código da ferramenta identifica
